色変更 (テスト)

--- a/scss/honoka/_variables.scss
+++ b/scss/honoka/_variables.scss
@@ -35,14 +35,14 @@ $grays: map-merge((
   "900": $gray-900
 ), $grays);
 
-$blue:    #007bff !default;
+$blue:    #3b9ae0 !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
-$red:     #dc3545 !default;
+$red:     #ea4b94 !default;
 $orange:  #fd7e14 !default;
-$yellow:  #ffc107 !default;
-$green:   #28a745 !default;
+$yellow:  #f0ba32 !default;
+$green:   #b2cf3e !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
